deploying-to_render

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -230,8 +230,8 @@
         </div>
         <div class="featured-tabs">
           <button class="tab-btn active" data-tab="short">Reels</button>
-          <button class="tab-btn" data-tab="long">Cinematic & Wedding Cuts</button>
-          <button class="tab-btn" data-tab="ads">Motion Graphics & Ads</button>
+          <button class="tab-btn" data-tab="long">Cinematic & Landscape</button>
+          <button class="tab-btn" data-tab="ads">Motion Graphics & Ads &Wedding </button>
 
         </div>
       </div>
